<resources>
    <string name="app_name">Class Trip</string>


    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="placeId">Place</string>
    <string name="emergency_contact_phone">Emergency Contact Phone</string>
    <string name="emergency_contact_name">Emergency Contact Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="email">Email</string>
    <string name="size">Size:</string>



    <string name="same_as_start_date">same as start startDate</string>

    <string name="trips">Trips</string>
    <string name="participants">Participants</string>
    <string name="groups">Groups</string>
    <string name="messages">Messages</string>


    <!--addTrip Strings-->
    <string name="add_trip" translatable="true">Add Trip</string>
    <string name="start_date" translatable="true">Start Date</string>
    <string name="end_date" translatable="true">End Date</string>
    <string name="start_time" translatable="true">Start Time</string>
    <string name="end_time" translatable="true">End Time</string>
    <string name="trip_name">Trip Name</string>

    <!--Roles Strings -->
    <string name="participant" translatable="true">Participant</string>
    <string name="leader" translatable="true">Leader</string>
    <string name="chaperone" translatable="true">Chaperone</string>
    <string name="organizer" translatable="true">Organizer</string>
    <string name="add_participant">Add Participant</string>
    <string name="role">Role</string>
    <string name="dates_invalid">Start startDate should be same or before end startDate.</string>
    <string name="times_invalid">Start startTime should be before end startTime.</string>
    <string name="group_name">Group Name</string>
    <string name="add_group">Add Group</string>


</resources>
